[package]
name = "tre-regex-sys"
version = "0.1.0"
edition = "2021"
description = "Rust bindgen bindings to the TRE regex module"
readme = "README.md"
repository = "https://github.com/Elizafox/tre-regex-sys"
license = "BSD-2-Clause"
rust-version = "1.60.0"
authors = ["Elizabeth Myers"]

[build-dependencies]
autotools = "0.2"
bindgen = "*"
