[package]
name = "tre-regex-sys"
version = "0.2.0"
edition = "2021"
description = "Rust bindgen bindings to the TRE regex module"
readme = "README.md"
repository = "https://github.com/Elizafox/tre-regex-sys"
license = "BSD-2-Clause"
rust-version = "1.60.0"
authors = ["Elizabeth Myers"]

[build-dependencies]
bindgen = "0.65.1"
autotools = {version = "0.2", optional = true}
fs_extra = {version = "1.3.0", optional = true}
pkg-config = "0.3.27"

[features]
default = ["approx", "vendored"]
vendored = ["autotools", "fs_extra"]
approx = []
wchar = []
