[package]
name = "tre-regex-sys"
version = "0.4.1"
edition = "2021"
description = "Rust bindgen bindings to the TRE regex module"
readme = "README.md"
repository = "https://github.com/Elizafox/tre-regex-sys"
license = "BSD-2-Clause"
rust-version = "1.74.0"
authors = ["Elizabeth Myers"]
categories = ["external-ffi-bindings", "text-processing"]
keywords = ["regex", "tre", "ffi", "bindings", "sys"]

[build-dependencies]
bindgen = "0.71.1"
autotools = {version = "0.2", optional = true}
fs_extra = {version = "1.3.0", optional = true}
pkg-config = "0.3.30" # XXX - this should be optional but we can't.

[features]
default = ["approx", "vendored"]
vendored = ["autotools", "fs_extra"]
approx = []
wchar = []

[dependencies]
autotools = "0.2"
bindgen = "0.71.1"
pkg-config = "0.3.30"
